Fix layout bugs.
Prevent Board origin moving when resizing window.
Improve Board scaling on very large / very small screens.

--- a/src/client/styles/components/Board.scss
+++ b/src/client/styles/components/Board.scss
@@ -10,6 +10,7 @@ $pillbug-stroke: hsla(164, 50%, 50%, 0.8);
 $background: hsl(0, 0%, 98%);
 
 div#board {
+    width: 100vw;
     background: $background;
 }
 
