--- a/src/client/styles/components/Inventory.scss
+++ b/src/client/styles/components/Inventory.scss
@@ -1,5 +1,5 @@
 // dimensions
-$max-piece-width: 110px;
+$max-piece-width: 120px;
 $h-padding: 30px;
 $v-padding: 15px;
 
